--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -1,7 +1,46 @@
 version: "3.9"
+
 services:
   app:
     build: .
     container_name: spring-demo
     ports:
-      - "8080:8080"
+      - "${APP_PORT}:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    networks:
+      - loja-network
+
+  postgres:
+    image: postgres:15
+    container_name: loja-postgres
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      TZ: America/Sao_Paulo
+    ports:
+      - "${DB_PORT}:5432"               # use 5433:5432 se 5432 estiver ocupada
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    networks:
+      - loja-network
+
+volumes:
+  postgres_data:
+
+networks:
+  loja-network:
+    driver: bridge
