--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       postgres:
         condition: service_healthy
     environment:
+      AUTH_SECRET_TOKEN: ${AUTH_SECRET}
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
